fixed title section alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -222,7 +222,7 @@ p {
         position: static;
     }
 
-    .container-fluid {
+    #title .container-fluid {
         text-align: center;
     }
 
